--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
     />
 
+    <!-- GOOGLE FONTS -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="./styles.css" />
     <title>Book List</title>
@@ -36,7 +42,7 @@
           <label for="isbn">ISBN#</label>
           <input type="text" id="isbn" class="u-full-width" />
         </div>
-        <input type="submit" value="submit" class="u-full-width" />
+        <input type="submit" value="submit" id="submit" class="u-full-width" />
       </form>
 
       <table class="u-full-width">
